renamed classes, new person design, list items in search

--- a/src/main/webapp/content.jspx
+++ b/src/main/webapp/content.jspx
@@ -19,20 +19,10 @@
       </c:otherwise>
     </c:choose>
   </mm:node>
-
-  <mm:escaper id="myfilesize" type="filesize">
-    <mm:param name="binaryPrefixes">${empty initParam['mmbase.filesize.binaryPrefixes'] ? true : initParam['mmbase.filesize.binaryPrefixes']}</mm:param>
-  </mm:escaper>
-
-  <mm:escaper type="substring" id="wrap_intro">
-    <mm:param name="from" value="0" />
-    <mm:param name="to" value="128" />
-    <mm:param name="ellipsis" value="..." />
-  </mm:escaper>
            
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="article ${nodetype}">
+      styleClass="content ${nodetype}">
     
     <jsp:attribute name="title"><mm:write referid="page_title" escape="inline" /></jsp:attribute>
     
@@ -73,9 +63,9 @@
               </mm:relatednodescontainer -->                
             </div>
             <div class="col-md-8">
-              <div class="article">
+              <header>
                 <div class="content-type">${nodetype}</div>
-                <h2 class="title">${page_title}</h2>
+                <h2 class="content-title">${page_title}</h2>
                 <div class="content-info">
                   
                   <!-- image of (first) author -->
@@ -116,7 +106,6 @@
                         </mm:relatednodescontainer>
                       </mm:hasrelationmanager>
                     </div>
-                    
                     <div class="date">
                       <mm:field name="created"><mm:time format="MMMM dd, yyyy" /></mm:field>
                     </div>
@@ -135,9 +124,16 @@
                       </ul>
                     </mm:relatednodescontainer>
                   </div>
+                  
                   <div class="content-info__related">
                     <ul>
-                    
+                      <mm:relatednodescontainer role="related" type="article" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#articles">${_} ${_ gt 1 ? 'articles' : 'article'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>                    
                       <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
                         <mm:size>
                           <mm:isgreaterthan value="0">
@@ -187,12 +183,20 @@
                           </mm:isgreaterthan>
                         </mm:size>
                       </mm:relatednodescontainer -->
+                      
                     </ul>
                   </div>
                 </div>
                 
-                <mm:field name="intro" escape="paragraph(intro)" />
-                
+                <mm:field name="intro" escape="paragraph(content-intro)" />
+              </header>
+            </div>
+            <div class="col-md-2"><!-- empty --></div>
+          </div>
+          
+          <section class="row">
+            <div class="col-md-2"><!-- empty --></div>
+            <div class="col-md-8">
                 <c:choose>
                   <c:when test="${nodetype eq 'person'}">
                     <mm:field name="biografy" escape="paragraph" />
@@ -201,185 +205,14 @@
                     <mm:field name="body" escape="paragraph" />
                   </c:otherwise>
                 </c:choose>
-                
-              </div>
             </div>
             <div class="col-md-2"><!-- empty --></div>
-          </div>
+          </section>
         
           <aside>
-
-            <!-- campaign -->
-            <mm:relatednodescontainer role="related" type="campaign" searchdirs="source">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="content-related row" id="campaigns">
-                    <div class="col-md-2"><!-- empty --></div>
-                    <div class="col-md-8">
-                      <h4 class="content-related__title">Campaigns</h4>
-                      <ul class="content-related__list __campaigns">
-                      <mm:relatednodes>
-                        <li>
-                          <mm:link page="content">
-                            <mm:frameworkparam name="component">tmf</mm:frameworkparam>
-                            <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
-                            <a href="${_}"><mm:field name="title" /></a>
-                            <mm:field name="subtitle"><mm:isnotempty><span class="content-related__link-description"><mm:write /></span></mm:isnotempty></mm:field>
-                          </mm:link>
-                        </li>
-                      </mm:relatednodes>
-                      </ul>
-                    </div>
-                    <div class="col-md-2"><!-- empty --></div>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-            
-            <!-- event -->
-            <mm:relatednodescontainer role="related" type="event" searchdirs="source">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="content-related row" id="events">
-                    <div class="col-md-2"><!-- empty --></div>
-                    <div class="col-md-8">
-                      <h4 class="content-related__title">Events</h4>
-                      <ul class="content-related__list __events">
-                      <mm:relatednodes>
-                        <li>
-                          <mm:link page="content">
-                            <mm:frameworkparam name="component">tmf</mm:frameworkparam>
-                            <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
-                            <a href="${_}"><mm:field name="title" /></a>
-                            <mm:field name="intro">
-                              <mm:isnotempty><span class="content-related__link-description"><mm:write escape="tagstripper, wrap_intro" /></span></mm:isnotempty>
-                            </mm:field>
-                          </mm:link>
-                        </li>
-                      </mm:relatednodes>
-                      </ul>
-                    </div>
-                    <div class="col-md-2"><!-- empty --></div>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-                        
-            <!-- url -->
-            <mm:relatednodescontainer role="related" type="url" searchdirs="destination">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="content-related row" id="links">
-                    <div class="col-md-2"><!-- empty --></div>
-                    <div class="col-md-8">
-                      <h4 class="content-related__title">Links</h4>
-                      <ul class="content-related__list __links">
-                      <mm:relatednodes>
-                        <li>
-                          <a href="${_node.url}"><mm:field name="title" /></a>
-                          <mm:field name="description"><mm:isnotempty>
-                            <span class="content-related__link-description"><mm:write /></span>
-                          </mm:isnotempty></mm:field>
-                        </li>
-                      </mm:relatednodes>
-                      </ul>
-                    </div>
-                    <div class="col-md-2"><!-- empty --></div>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-
-            <!-- files -->
-            <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="row content-related" id="files">
-                    <div class="col-md-2"><!-- empty --></div>
-                    <div class="col-md-8">
-                      <h4 class="content-related__title">Files</h4>
-                      <ul class="content-related__list __files">
-                      <mm:relatednodes>
-                        <mm:attachment>
-                          <li>
-                            <a href="${_}"><mm:field name="title" /></a>
-                            <span class="content-related__link-description"><mm:field name="filename" />, <mm:field name="size" escape="myfilesize" /></span>
-                          </li>
-                        </mm:attachment>
-                      </mm:relatednodes>
-                      </ul>
-                    </div>
-                    <div class="col-md-2"><!-- empty --></div>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-
-            <!-- video -->
-            <mm:relatednodescontainer role="related" type="video" searchdirs="destination">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="content-related row" id="videos">
-                    <div class="col-md-10 col-md-offset-2"> 
-                      <h4 class="content-related__title __video">Video</h4>
-                    </div>
-                  </div>
-                  <div class="content-related row">
-                    <ul>
-                      <mm:relatednodes>
-                        <mm:link page="media">
-                          <mm:frameworkparam name="component">tmf</mm:frameworkparam>
-                          <mm:frameworkparam name="n">${_node}</mm:frameworkparam>
-                          <a href="${_}" class="content-related__image">
-                            <mm:relatednodes type="picture" max="1">
-                              <mm:import id="image" reset="true"><mm:image mode="url" width="200" height="150" /></mm:import>
-                            </mm:relatednodes>
-                            <mm:notpresent referid="image">
-                              <mm:import id="image" reset="true">${mm:link('/style/images/video-003.gif')}</mm:import>
-                            </mm:notpresent>
-                            <div class="content-related__image-bg" style="background-image:url(${image})"><!-- empty --></div>
-                            <span><mm:field name="title" escape="inline" /></span>
-                          </a>
-                        </mm:link>
-                      </mm:relatednodes>
-                    </ul>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-
-            <!-- picture -->
-            <mm:relatednodescontainer path="posrel,picture">
-              <mm:size>
-                <mm:isgreaterthan value="0">
-                  <div class="content-related row" id="images">
-                    <div class="col-md-10 col-md-offset-2"> 
-                      <h4 class="content-related__title __images">Images</h4>
-                    </div>
-                  </div>
-                  <div class="content-related row">
-                    <div class="col-md-11 col-md-offset-1">
-                      <ul class="content-related__list __images">
-                      <mm:sortorder field="posrel.pos" />
-                      <mm:relatednodes>		
-                        <mm:link page="/picture" referids="_node@pic">
-                          <mm:import id="image" reset="true"><mm:image mode="url" width="200" height="150" /></mm:import>
-                          <li>
-                            <a href="${_}" class="content-related__image">
-                              <div class="content-related__image-bg" style="background-image:url(${image})"><!-- empty --></div>
-                              <span><mm:field name="title" /></span>
-                            </a>
-                          </li>
-                        </mm:link>
-                      </mm:relatednodes>
-                      </ul>
-                    </div>
-                  </div>
-                </mm:isgreaterthan>
-              </mm:size>
-            </mm:relatednodescontainer>
-            
+            <tmf:content-related />
           </aside>
+          
         </article>
                 
       </mm:node>
