--- a/src/main/webapp/person.jspx
+++ b/src/main/webapp/person.jspx
@@ -21,7 +21,7 @@
            
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="person">
+      styleClass="content person">
     
     <jsp:attribute name="title"><mm:write referid="page_title" escape="inline" /></jsp:attribute>
     
@@ -48,56 +48,105 @@
     <jsp:attribute name="body">
       <mm:node referid="page">
       
-        <section class="container">
+        <article class="container">
           <div class="row">
             <div class="col-md-2"><!-- empty --></div>
             <div class="col-md-8">
-                  
-              <div class="content-info __person">
-                <div class="row">
-                  <div class="col-md-2 start-xs">
-                    <div class="content-type">Person</div>
+              <header>
+                <div class="content-type">Person</div>
+                <h1 class="content-title">${page_title}</h1>
+                
+                <div class="content-info __person">
+                  <div class="content-info__image">
+                    <mm:relatednodescontainer type="picture" role="posrel" searchdirs="destination">
+                      <mm:maxnumber value="1" />
+                      <mm:relatednodes>
+                        <div class="content-info__image">
+                          <mm:image mode="img" width="240" height="240" crop="middle" />
+                        </div>
+                      </mm:relatednodes>
+                    </mm:relatednodescontainer>
                   </div>
-                  <div class="col-md-10">
-                    <div class="content-info__image">
-                      <mm:relatednodescontainer type="picture" role="posrel" searchdirs="destination">
-                        <mm:maxnumber value="1" />
-                        <mm:relatednodes>
-                          <div class="content-info__image">
-                            <mm:image mode="img" width="240" height="240" crop="middle" />
-                          </div>
-                        </mm:relatednodes>
+                  <div class="content-info__related">
+                    <ul>
+                      <mm:relatednodescontainer role="author" type="article" searchdirs="source">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#articles">${_} ${_ gt 1 ? 'articles' : 'article'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
                       </mm:relatednodescontainer>
-                    </div>
-                    <h1 class="content-info__title">${page_title}</h1>
+                      <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#files">${_} ${_ gt 1 ? 'files' : 'file'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="url" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#links">${_} ${_ gt 1 ? 'links' : 'link'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="video" searchdirs="destination">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#videos">${_} ${_ gt 1 ? 'videos' : 'video'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer path="posrel,picture">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#images">${_} ${_ gt 1 ? 'images' : 'image'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="campaign" searchdirs="source">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#campaigns">${_} ${_ gt 1 ? 'campaigns' : 'campaign'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <mm:relatednodescontainer role="related" type="event" searchdirs="source">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#events">${_} ${_ gt 1 ? 'events' : 'event'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer>
+                      <!-- mm:relatednodescontainer role="related" type="person" searchdirs="source">
+                        <mm:size>
+                          <mm:isgreaterthan value="0">
+                            <li><a href="#persons">${_} ${_ gt 1 ? 'persons' : 'person'}</a></li>
+                          </mm:isgreaterthan>
+                        </mm:size>
+                      </mm:relatednodescontainer -->
+                    </ul>
                   </div>
                 </div>
-                <mm:field name="intro" escape="paragraph(content-info__text)" />
-              </div>
-              <mm:field name="biografy" escape="paragraph(person-intro)" />
-            
+                <mm:field name="intro" escape="paragraph(content-intro)" />
+                <mm:field name="biografy" escape="paragraph" />
+              </header>
             </div>
           </div>
-
-          <mm:relatednodescontainer role="related" type="content" searchdirs="source">
-            <mm:relatednodes> 
-              
-              <div class="row">
-                <div class="col-md-2"><!-- empty --></div>
-                <div class="col-md-8">
-                  
-                  <tmf:content />
-                  
-                  <mm:last inverse="true"><hr /></mm:last>
-                  
-                </div>
-                <div class="col-md-2"><!-- empty --></div>
-              </div>
-                      
-            </mm:relatednodes>
-          </mm:relatednodescontainer>
-
-        </section>
+          
+          <section class="row">
+            <div class="col-md-2"><!-- empty --></div>
+            <div class="col-md-8">
+                <mm:field name="biografy" escape="paragraph" />
+            </div>
+            <div class="col-md-2"><!-- empty --></div>
+          </section>
+          
+          <aside>
+            <tmf:content-related />
+          </aside>
+          
+        </article>
                 
       </mm:node>
     </jsp:attribute>
