details on pager, listitems and footer

--- a/frontend/source/less/modules/listitem.less
+++ b/frontend/source/less/modules/listitem.less
@@ -13,6 +13,10 @@
 
         a {
             color: @color-grey--50;
+
+            &:hover {
+                color: @color-primary;
+            }
         }
     }
 
@@ -25,6 +29,14 @@
         
         @media @screen-sm-max {
             .font(medium);
+        }
+
+        a {
+            color: @color-grey--50;
+
+            &:hover {
+                color: @color-primary;
+            }
         }
     }
 
