--- a/frontend/source/pug/layout/footer.pug
+++ b/frontend/source/pug/layout/footer.pug
@@ -2,7 +2,7 @@
     .container
         .row
             .col-sm-2
-            .col-sm-3.center-xs.start-md
+            .col-sm-3.center-xs.start-sm
                 .footer-inner
                     strong Tactical Media Files
                     ul.footer__navigation
@@ -14,7 +14,7 @@
                             a.footer__link( href="#" ) Contact
                         li
                             a.footer__link( href="#" ) Blog
-            .col-sm-3.center-xs.start-md
+            .col-sm-3.center-xs.start-sm
                 .footer-inner
                     strong Filter archive
                     ul.footer__navigation
@@ -26,7 +26,7 @@
                             a.footer__link( href="#" ) Pictures
                         li
                             a.footer__link( href="#" ) Files
-            .col-sm-3.center-xs.start-md
+            .col-sm-3.center-xs.start-sm
                 .footer-inner
                     strong Browse archive
                     ul.footer__navigation
