content related info tag, boolean for filter or not

--- a/src/main/webapp/content.jspx
+++ b/src/main/webapp/content.jspx
@@ -6,7 +6,7 @@
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0">
 
   <mm:import externid="n" id="page">article_about</mm:import>
-  <mm:import externid="cacheable"  />
+  <mm:import externid="cacheable" />
   
   <mm:node referid="page">
     <mm:nodeinfo type="type" id="nodetype" write="false" />
@@ -22,7 +22,8 @@
            
   <tmf:html
       cacheable="${cacheable}"
-      styleClass="content ${nodetype}">
+      styleClass="content ${nodetype}"
+      filter="false">
     
     <jsp:attribute name="title"><mm:write referid="page_title" escape="inline" /></jsp:attribute>
     
@@ -126,65 +127,7 @@
                   </div>
                   
                   <div class="content-info__related">
-                    <ul>
-                      <mm:relatednodescontainer role="related" type="article" searchdirs="destination">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#articles">${_} ${_ gt 1 ? 'articles' : 'article'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>                    
-                      <mm:relatednodescontainer role="related" type="file" searchdirs="destination">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#files">${_} ${_ gt 1 ? 'files' : 'file'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <mm:relatednodescontainer role="related" type="url" searchdirs="destination">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#links">${_} ${_ gt 1 ? 'links' : 'link'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <mm:relatednodescontainer role="related" type="video" searchdirs="destination">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#videos">${_} ${_ gt 1 ? 'videos' : 'video'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <mm:relatednodescontainer path="posrel,picture">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#images">${_} ${_ gt 1 ? 'images' : 'image'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <mm:relatednodescontainer role="related" type="campaign" searchdirs="source">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#campaigns">${_} ${_ gt 1 ? 'campaigns' : 'campaign'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <mm:relatednodescontainer role="related" type="event" searchdirs="source">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#events">${_} ${_ gt 1 ? 'events' : 'event'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer>
-                      <!-- mm:relatednodescontainer role="related" type="person" searchdirs="source">
-                        <mm:size>
-                          <mm:isgreaterthan value="0">
-                            <li><a href="#persons">${_} ${_ gt 1 ? 'persons' : 'person'}</a></li>
-                          </mm:isgreaterthan>
-                        </mm:size>
-                      </mm:relatednodescontainer -->
-                      
-                    </ul>
+                    <tmf:content-info-related />
                   </div>
                 </div>
                 
