configuration for showing filter

--- a/frontend/source/less/layout/navigation.less
+++ b/frontend/source/less/layout/navigation.less
@@ -28,7 +28,7 @@
         color: @color-grey--20;
     }
     
-    form.nav__search {
+    .nav__search {
         position: relative;
         height: 2.8rem;
         width: 28.2rem;
