--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -3,6 +3,7 @@ extends layout/page
 prepend variables
     - title = 'Collection'
     - bodyClass = 'collection'
+    - showFilter = true;
     - selected = 'all';
 
 append main
