--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -3,6 +3,7 @@ extends layout/page
 prepend variables
     - title = 'Home'
     - bodyClass = 'home'
+    - showFilter = true;
     - selected = 'all'
 
 append main
