--- a/frontend/source/pug/layout/overlay.pug
+++ b/frontend/source/pug/layout/overlay.pug
@@ -55,3 +55,30 @@
             .col-md-2
                 a.close( href="#close" title="Close" data-select-results-close="close" )
 
+    
+    .container.filter
+        .row
+            .col-md-2
+            .col-md-8
+                h2 Filter
+                ul
+                    li 
+                        a( href="list.html" ) All
+                    li 
+                        a( href="list.html" ) Articles
+                    li 
+                        a( href="videos.html" ) Videos
+                    li 
+                        a( href="list.html" ) Files
+                    li 
+                        a( href="list.html" ) Pictures
+                    li 
+                        a( href="list.html" ) Peoples
+                    li 
+                        a( href="list.html" ) Events
+                    li 
+                        a( href="list.html" ) Campaigns
+
+            .col-md-2
+                a.close( href="#close" title="Close" data-select-results-close="close" )
+
