--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -3,6 +3,7 @@ extends layout/page
 prepend variables
     - title = 'Search'
     - bodyClass = 'list'
+    - showFilter = true;
     - selected = 'all';
 
 append main
