--- a/frontend/source/pug/videos.pug
+++ b/frontend/source/pug/videos.pug
@@ -2,6 +2,7 @@ extends layout/page
 
 prepend variables
     - title = 'Videos'
+    - showFilter = true;
     - selected = 'videos';
     - bodyClass = 'videos'
 
